Roster Trunk - Char info -- Changed Quick Jump icon -- Fixed sub-menu pane placement

--- a/templates/roster3/style.css
+++ b/templates/roster3/style.css
@@ -34,7 +34,7 @@ a:hover, a:active { color:#069; text-decoration:none; font-weight:bold; }
 /* General Scope Block */
 .scope-menu { padding: 10px 10px 10px 130px; margin-bottom: 30px; position: relative; z-index: 100; }
 .scope-menu .menu-scope { margin:2px 0px 0px; padding:0px; width:100%; display:block; }
-.scope-menu .menu-scope-panel { background: url(./images/shader.png) repeat; border: 1px solid #9D7D1C; max-width: 100%; position: absolute; z-index: 200; left: 0; top: 30px; padding: 5px; }
+.scope-menu .menu-scope-panel { background: url(./images/shader.png) repeat; border: 1px solid #9D7D1C; max-width: 100%; position: absolute; z-index: 200; left: 0; top: -100px; padding: 5px; }
 .scope-menu .menu-scope-panel a { width:40px; height:40px; }
 
 .scope-menu ul { list-style-type:none; margin:0px; padding:0px; width:100%; display: table; }
